--- a/src/index.css
+++ b/src/index.css
@@ -1,5 +1,20 @@
-body {
+* {
   margin: 0;
   padding: 0;
+  box-sizing: border-box;
+}
+
+html,
+body,
+#root {
+  height: 100%;
+  width: 100%;
+  padding: 0;
+  margin: 0;
   font-family: sans-serif;
+}
+
+#map {
+  height: 100%;
+  width: 100%;
 }
