--- a/src/App.css
+++ b/src/App.css
@@ -1,8 +1,55 @@
-body{
-    padding: 0;
-    margin: 0;
+html,
+body,
+#root {
+  height: 100%;
+  width: 100%;
+  padding: 0;
+  margin: 0;
+  font-family: sans-serif;
+}
+html, body, main{
+  height: 100%;
+  width: 100%;
 }
 
+// settings for off canvas nav element
+nav {
+  width: 300px;
+  height: 100%;
+  position: absolute;
+  transform: translate(-300px, 0);
+  transition: transform 0.3s ease;
+}
+
+.App,
+#map {
+  height: 100%;
+  width: 100%;
+
+}
+
+.menuToggle {
+  display: flex;
+  flex-wrap: wrap;
+  width: 100%;
+}
+
+ul.location-item {
+  padding: 1em 0;
+  margin-bottom: 2rem;
+}
+
+ul.locations-list {
+  height: 100%;
+  width: 250px;
+  padding: 0 10px 10px 10px;
+  list-style: none;
+  background: #fff;
+  max-width: 250px;
+
+}
+
+/* FOOTER */
 
 footer {
     height: 50px;
@@ -26,4 +73,19 @@ footer .bottom-bar {
 footer .bottom-bar .heart {
     color: #f73f51;
     font-size: 22px;
+}
+
+@media screen and (min-width: 600px){
+  nav {
+    position: relative;
+    transform: translate(0, 0);
+  }
+  body {
+    display: flex;
+    flex-flow: row nowrap;
+  }
+  main {
+    width: auto;
+    flex-grow: 1;
+  }
 }
