--- a/src/App.css
+++ b/src/App.css
@@ -18,10 +18,8 @@ html, body, main{
 }
 
 .list-btn,
-.list-input,
 .info-window-box {
-  box-shadow: 0 0 3px rgba(170, 170, 170, 0.75);
-  border-radius: 10%;
+  box-shadow: 0 0 1px rgba(170, 170, 170, 0.75);
 }
 
 /* FILTER LOCATIONS */
@@ -31,18 +29,23 @@ html, body, main{
 }
 .list-box {
   position: fixed;
-  top: 45px;
+  top: 10px;
   left: 0;
   z-index: 100;
   padding: 0 10px;
 }
 
 .list-btn {
+  left: 181px;
+  position: fixed;
   border: none;
+  width: 75px;
+  height: 40px;
   padding: 5px 8px;
-  background: #fff;
+  background: white;
   font-weight: 600;
-  border-radius: 2px 0 0 2px;
+  color: red;
+  border-radius: 0px 2px 0 0px;
 }
 
 .list-btn:hover {
@@ -50,18 +53,25 @@ html, body, main{
 }
 
 .list-input {
+  height: 15px;
+  position: fixed;
+  top: 50px;
   border: none;
   padding: 5px 8px;
-  border-radius: 0 2px 2px 0;
-  width: 225px;
+  width: 230px;
+  box-shadow: 0 0 1px rgba(170, 170, 170, 0.75);
 
 }
 
 .locations-list {
+  position: fixed;
+  top: 75px;
   padding: 0 10px 10px 10px;
   list-style: none;
   background: #fff;
-  width: 225px;
+  width: 226px;
+  box-shadow: 0 0 1px rgba(170, 170, 170, 0.75);
+
 }
 
 .location-item {
@@ -70,8 +80,8 @@ html, body, main{
 }
 
 .location-item:hover {
-  border-color: #35b4bf;
-  color: #35b4bf;
+  border-color: red;
+  color: red;
   cursor: pointer;
 }
 
